--- a/static/css/main.css
+++ b/static/css/main.css
@@ -357,6 +357,10 @@ header {
     padding: 0 1rem;
   }
 
+  .app-container {
+    overflow-x: hidden;
+  }
+
   .hamburger {
     display: flex;
   }
